Create analysis py

--- a/SSTAnalysis_daily.ipynb
+++ b/SSTAnalysis_daily.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "1df62f37-e43c-4f83-9107-5cebfdbacca9",
    "metadata": {},
    "outputs": [],
@@ -32,6 +32,7 @@
     "import xarray as xr\n",
     "import pandas as pd\n",
     "from matplotlib.dates import DateFormatter\n",
+    "import platform\n",
     "\n",
     "plt.rcParams['figure.figsize'] = (10, 4)"
    ]
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "id": "c48e104c-74f0-42da-b07f-59e2c92d6adb",
    "metadata": {},
    "outputs": [],
@@ -80,15 +81,15 @@
     "\n",
     "#titulo_short = 'NH'\n",
     "#titulo = 'Northern hemisphere'\n",
-    "#sst = DS.sst.sel(lat=slice(0,88))\n",
+    "#sst = DS.sst.sel(lat=slice(0,80))\n",
     "\n",
     "#titulo_short = 'SH'\n",
     "#titulo = 'Southern hemisphere'\n",
-    "#sst = DS.sst.sel(lat=slice( -88, 0))\n",
+    "#sst = DS.sst.sel(lat=slice( -80, 0))\n",
     "\n",
     "titulo_short = 'GO'\n",
     "titulo = 'Global Ocean'\n",
-    "sst = DS.sst.sel(lat=slice( -88, 88))\n",
+    "sst = DS.sst.sel(lat=slice( -80, 80))\n",
     "\n",
     "#titulo_short = 'NTenerife'\n",
     "#titulo = 'North Tenerife'\n",
@@ -102,8 +103,7 @@
     "tags": []
    },
    "source": [
-    "## Global mean\n",
-    "(weigthed)"
+    "## Global mean"
    ]
   },
   {
@@ -150,51 +150,7 @@
     "weights = weights/weights.max()\n",
     "weights.name = \"weights\"\n",
     "sst_weighted = sst.weighted(weights)\n",
-    "sst_Wmean = sst_weighted.mean((\"lon\", \"lat\"),skipna=True).load()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "id": "316f0711-460c-409b-9ff1-baab69fd07e5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m \u001b[0msst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweighted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'DataArray'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;34m'DataArrayWeighted'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m\n",
-       "Weighted DataArray operations.\n",
-       "\n",
-       "Parameters\n",
-       "----------\n",
-       "weights : DataArray\n",
-       "    An array of weights associated with the values in this Dataset.\n",
-       "    Each value in the data contributes to the reduction operation\n",
-       "    according to its associated weight.\n",
-       "\n",
-       "Notes\n",
-       "-----\n",
-       "``weights`` must be a DataArray and cannot contain missing values.\n",
-       "Missing values can be replaced by ``weights.fillna(0)``.\n",
-       "\n",
-       "Returns\n",
-       "-------\n",
-       "core.weighted.DataArrayWeighted\n",
-       "\n",
-       "See Also\n",
-       "--------\n",
-       "Dataset.weighted\n",
-       "\u001b[0;31mFile:\u001b[0m      ~/miniconda3/envs/Ocean/lib/python3.11/site-packages/xarray/core/dataarray.py\n",
-       "\u001b[0;31mType:\u001b[0m      method"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "sst.weighted?"
+    "sst_wmean = sst_weighted.mean((\"lon\", \"lat\"),skipna=True).load()"
    ]
   },
   {
@@ -214,7 +170,7 @@
    "outputs": [],
    "source": [
     "#Create monthly climatology\n",
-    "sst_Clim = sst.sel(time=slice(year1,year2)).groupby('time.dayofyear').mean(dim='time').load();"
+    "sst_clim = sst.sel(time=slice(year1,year2)).groupby('time.dayofyear').mean(dim='time').load();"
    ]
   },
   {
@@ -225,7 +181,7 @@
    "outputs": [],
    "source": [
     "#Create anomaly\n",
-    "sst_anom = sst.groupby('time.dayofyear') - sst_Clim"
+    "sst_anom = sst.groupby('time.dayofyear') - sst_clim"
    ]
   },
   {
@@ -246,9 +202,10 @@
     "# Calculate global mean weigthtened\n",
     "# For a rectangular grid the cosine of the latitude is proportional to the grid cell area.\n",
     "weights = np.cos(np.deg2rad(sst.lat))\n",
+    "weights = weights/weights.max()\n",
     "weights.name = \"weights\"\n",
     "sst_anom_weighted = sst_anom.weighted(weights)\n",
-    "sst_anom_Wmean = sst_anom_weighted.mean((\"lon\", \"lat\"),skipna=True).load()"
+    "sst_anom_wmean = sst_anom_weighted.mean((\"lon\", \"lat\"),skipna=True).load()"
    ]
   },
   {
@@ -259,10 +216,8 @@
    "outputs": [],
    "source": [
     "# smoothed versions\n",
-    "sst_Wmean_Y = sst_Wmean.resample(time='1m').mean(dim='time',skipna=True)\n",
-    "sst_Wmean_rolling = sst_Wmean.rolling(time=360,center=True).mean()\n",
-    "sst_anom_Wmean_Y = sst_anom_Wmean.resample(time='1m').mean(dim='time',skipna=True)\n",
-    "sst_anom_Wmean_rolling = sst_anom_Wmean.rolling(time=360,center=True).mean()"
+    "sst_wmean_rolling = sst_wmean.rolling(time=360,center=True).mean()\n",
+    "sst_anom_wmean_rolling = sst_anom_wmean.rolling(time=360,center=True).mean()"
    ]
   },
   {
@@ -284,9 +239,8 @@
    ],
    "source": [
     "fig, ax = plt.subplots(1, 1 , figsize=(14,8))\n",
-    "ax.plot(sst_Wmean.time,sst_Wmean)\n",
-    "#ax.plot(sst_Wmean_Y.time,sst_Wmean_Y,'-b',label='Yearly')\n",
-    "ax.plot(sst_Wmean_rolling.time,sst_Wmean_rolling,'-b',label='average')\n",
+    "ax.plot(sst_Wmean.time,sst_wmean)\n",
+    "ax.plot(sst_Wmean_rolling.time,sst_wmean_rolling,'-b',label='average')\n",
     "ax.grid()\n",
     "ax.legend()\n",
     "ax.set_title('Mean daily '+titulo+' Sea Surface Temperature');"
@@ -311,14 +265,13 @@
    ],
    "source": [
     "fig, ax = plt.subplots(1, 1 , figsize=(10,4))\n",
-    "ax.plot(sst_anom_Wmean.time        ,sst_anom_Wmean,'b',label='Daily anomaly')\n",
-    "ax.plot(sst_anom_Wmean_Y.time      ,sst_anom_Wmean_Y,'r',label='Monthly anomaly')\n",
-    "#ax.plot(sst_anom_Wmean_rolling.time,sst_anom_Wmean_rolling,'r')\n",
+    "ax.plot(sst_anom_wmean.time        ,sst_anom_wmean,'b',label='Daily anomaly')\n",
+    "ax.plot(sst_anom_wmean_rolling.time,sst_anom_wmean_rolling,'r')\n",
     "\n",
-    "ax.plot(sst_anom_Wmean.time.isel(sst_anom_Wmean.argmax(...)),\n",
-    "        sst_anom_Wmean.isel(sst_anom_Wmean.argmax(...)),'ro')\n",
-    "ax.plot(sst_anom_Wmean.time.isel(sst_anom_Wmean.argmin(...)),\n",
-    "        sst_anom_Wmean.isel(sst_anom_Wmean.argmin(...)),'bo')\n",
+    "ax.plot(sst_anom_wmean.time.isel(sst_anom_wmean.argmax(...)),\n",
+    "        sst_anom_wmean.isel(sst_anom_wmean.argmax(...)),'ro')\n",
+    "ax.plot(sst_anom_wmean.time.isel(sst_anom_Wmean.argmin(...)),\n",
+    "        sst_anom_wmean.isel(sst_anom_wmean.argmin(...)),'bo')\n",
     "\n",
     "ax.grid()\n",
     "ax.legend()\n",
@@ -361,9 +314,9 @@
    ],
    "source": [
     "fig, ax = plt.subplots(1, 1 , figsize=(5,5))\n",
-    "ax.contourf(sst_Clim.mean(dim='lon').dayofyear,\n",
-    "                 sst_Clim.mean(dim='lon').lat,\n",
-    "                 sst_Clim.mean(dim='lon').transpose(),levels=12, vmin=-2, vmax=30)\n",
+    "ax.contourf(sst_clim.mean(dim='lon').dayofyear,\n",
+    "                 sst_clim.mean(dim='lon').lat,\n",
+    "                 sst_clim.mean(dim='lon').transpose(),levels=12, vmin=-2, vmax=30)\n",
     "ax.set_ylim(-78,78)\n",
     "ax.grid()\n",
     "ax.set_title('Seasonal Climatoloy (' + year1 + '-' + year2 + ')')\n",
@@ -379,71 +332,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sst_Wmean.to_netcdf('sstd_'+titulo_short+'mean.nc')\n",
-    "sst_anom_Wmean.to_netcdf('sstd_anom_'+titulo_short+'mean.nc')"
+    "sst_wmean.to_netcdf('./data/Psstd_mean_'+titulo_short+'.nc',mode='w')\n",
+    "sst_clim.to_netcdf('./data/Psstd_clim_'+titulo_short+'.nc',mode='w')\n",
+    "sst_anom_wmean.to_netcdf('./data/Psstd_anom_mean_'+titulo_short+'.nc',mode='w')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f875fb56-d57b-4fbf-abbd-26f8ab4a423c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49d5ea8e-9a70-4560-9837-3c01b2862fbd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Titulos = ['Oceano Global','Northern Hemisphere']\n",
-    "Titulos_short = ['GO','NH']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb49d376-d1e6-4172-8a0a-3f68178a3d85",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(0,len(Titulos)):\n",
-    "    titulo = Titulos[i]\n",
-    "    titulo_short = Titulos_short[i]\n",
-    "    \n",
-    "    if titulo_short=='NH':\n",
-    "        sst = DS.sst.sel(lat=slice(0,88))\n",
-    "        print(titulo)\n",
-    "    elif titulo_short=='SH':\n",
-    "        sst = DS.sst.sel(lat=slice( -88, 0))\n",
-    "        print(titulo)\n",
-    "    elif titulo_short=='GO':\n",
-    "        sst = DS.sst.sel(lat=slice( -88, 88))\n",
-    "        print(titulo)\n",
-    "    elif titulo_short=='NTenerife':\n",
-    "        sst = DS.sst.sel(lon=360-16.1188,lat=28.5559,method='nearest')\n",
-    "        print(titulo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3bc2fec-8dc0-4d15-8df4-5efa61796dca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sst"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60d19079-9655-4444-a0ca-c656327d898a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
