--- a/SSTAnalysis_daily.ipynb
+++ b/SSTAnalysis_daily.ipynb
@@ -5,19 +5,7 @@
    "id": "0037c146-943a-43df-b5d6-d1d0b5a8189a",
    "metadata": {},
    "source": [
-    "# Global mean Sea Surface Temperatures\n",
-    "\n",
-    "Create the following data files in netcdf format\n",
-    "\n",
-    "**sst** - SST monthly mean (time: 492,lat: 720,lon: 1440)\n",
-    "\n",
-    "**sst_Wmean** - SST weighted global mean (time)\n",
-    "\n",
-    "**sst_Clim** - monthly climatology (month: 12lat: 720lon: 1440)\n",
-    "\n",
-    "**sst_anom** - anomaly from monthly Climatology (time: 492, lat: 720,lon: 1440)\n",
-    "\n",
-    "**sst_anom_Wmean** - SST anomlay weighted global mean (time: 492)\n"
+    "# Global mean Sea Surface Temperatures"
    ]
   },
   {
