--- a/Analysis_DownloadData.ipynb
+++ b/Analysis_DownloadData.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "year = datetime.date.today().year\n",
-    "FileThisYear = 'sst.day.mean.'+str(year)+'.nc'"
+    "fileThisYear = 'sst.day.mean.'+str(year)+'.nc'"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ftp.retrbinary(\"RETR \" + FileThisYear, open(FileThisYear, 'wb').write)\n",
+    "ftp.retrbinary(\"RETR \" + vileThisYear, open(FileThisYear, 'wb').write)\n",
     "ftp.quit();"
    ]
   },
