--- a/Analysis_data_daily.ipynb
+++ b/Analysis_data_daily.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "1df62f37-e43c-4f83-9107-5cebfdbacca9",
    "metadata": {},
    "outputs": [],
@@ -21,6 +21,7 @@
     "import pandas as pd\n",
     "from matplotlib.dates import DateFormatter\n",
     "import platform\n",
+    "import os\n",
     "\n",
     "plt.rcParams['figure.figsize'] = (10, 4)"
    ]
@@ -35,14 +36,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
+   "id": "16fa8168-9a5e-450d-ac67-7e24fe1fad27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year1=1982\n",
+    "year2=2023"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "95fc918c-c177-4c1c-bee5-efd9e7fe07fd",
    "metadata": {},
    "outputs": [],
    "source": [
     "#To compute de climatoloy\n",
-    "year1='1982'\n",
-    "year2='1992'"
+    "yearC1='1982'\n",
+    "yearC2='1992'"
    ]
   },
   {
@@ -55,20 +67,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c48e104c-74f0-42da-b07f-59e2c92d6adb",
+   "execution_count": 10,
+   "id": "9d63a86b-a734-46b6-80eb-d8f0545badfb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load data\n",
     "if os.uname().nodename.lower().find('eemmmbp') != -1:\n",
     "    base_file = '/Users/pvb/Dropbox/Oceanografia/Data/Satelite/noaa.oisst.v2.highres/NC/sst.day.mean'\n",
     "elif os.uname().nodename.lower().find('rossby') != -1:\n",
     "    base_file = '/data/shareddata/Satelite/noaa.oisst.v2.highres/NC/sst.day.mean'\n",
-    "    dataDir = '/home/pvb/Analisis/SSTGlobalAnalysis/data'\n",
-    "\n",
-    "files = [f'{base_file}.{year}.nc' for year in range(1982, 2024)]\n",
-    "DS = xr.open_mfdataset(files)\n",
+    "    dataDir = '/home/pvb/Analisis/SSTGlobalAnalysis/data'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54958a4a-4330-4f2a-aff1-f4b3eda57a21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = [f'{base_file}.{year}.nc' for year in range(year1, year2+1)]\n",
+    "DS = xr.open_mfdataset(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c48e104c-74f0-42da-b07f-59e2c92d6adb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load data1\n",
     "\n",
     "#titulo_short = 'NH'\n",
     "#titulo = 'Northern hemisphere'\n",
@@ -86,6 +115,14 @@
     "#titulo = 'North Tenerife'\n",
     "#sst = DS.sst.sel(lon=slice(360-16.,360-15.),lat=slice(28.50,28.75))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b36f524-7b3e-4de0-b022-1af6364cc7be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -155,13 +192,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "87d2927d-d7c1-4686-8886-a5d2d999ee54",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sst' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#Create monthly climatology\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m sst_clim \u001b[38;5;241m=\u001b[39m \u001b[43msst\u001b[49m\u001b[38;5;241m.\u001b[39msel(time\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mslice\u001b[39m(yearC1,yearC2))\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtime.dayofyear\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mmean(dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtime\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mload();\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sst' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Create monthly climatology\n",
-    "sst_clim = sst.sel(time=slice(year1,year2)).groupby('time.dayofyear').mean(dim='time').load();"
+    "sst_clim = sst.sel(time=slice(yearC1,yearC2)).groupby('time.dayofyear').mean(dim='time').load();"
    ]
   },
   {
