--- a/downloadData.ipynb
+++ b/downloadData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "id": "1ab922ea-ccb3-44d1-a7b2-256a23468502",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "1aff5ca3-ab30-4e6f-a209-1f21fab10312",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "id": "dbc2c917-e08e-43d4-851b-572ac9585fde",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "id": "3a9e99c0-3478-4395-9e96-bb1fd5072233",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "id": "375e9af0-93f7-4e09-b0f0-1c59813ad3e1",
    "metadata": {},
    "outputs": [],
@@ -60,12 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "id": "fb9db22b-1cd6-48f6-b9a1-4247f22f7cb3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ftp.retrbinary(\"RETR \" + vileThisYear, open(FileThisYear, 'wb').write)\n",
+    "ftp.retrbinary(\"RETR \" + fileThisYear, open(fileThisYear, 'wb').write)\n",
     "ftp.quit();"
    ]
   },
