--- a/downloadData.ipynb
+++ b/downloadData.ipynb
@@ -9,12 +9,13 @@
    "source": [
     "from ftplib import FTP\n",
     "import datetime\n",
+    "import xarray as xr\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "1aff5ca3-ab30-4e6f-a209-1f21fab10312",
    "metadata": {},
    "outputs": [],
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "dbc2c917-e08e-43d4-851b-572ac9585fde",
    "metadata": {},
    "outputs": [],
@@ -71,8 +72,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "638ae567-b0be-414d-b93d-271e266f640b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/data/shareddata/Satelite/noaa.oisst.v2.highres/NCsst.day.mean.2023.nc'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_dir+fileThisYear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ce06e52c-f44c-4161-b96b-4c59aa754f6c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "066ce184-8209-414e-a444-a53de8879bf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>>>> Last data: 06 August 2023\n"
+     ]
+    }
+   ],
+   "source": [
+    "DS = xr.open_dataset(data_dir+'/'+fileThisYear)\n",
+    "print('>>>>> Last data: '+DS.time[-1].dt.strftime(\"%d %B %Y\").values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55917d56-c975-4dbf-8dc1-169e59002f30",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -80,9 +129,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:ocean]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-ocean-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -94,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
