--- a/analysisData_daily.ipynb
+++ b/analysisData_daily.ipynb
@@ -851,9 +851,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ocean]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-ocean-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -865,7 +865,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
