--- a/plotsMapAnomalies.ipynb
+++ b/plotsMapAnomalies.ipynb
@@ -701,9 +701,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ocean]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-ocean-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -715,7 +715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
