--- a/analysisData_daily_dask.ipynb
+++ b/analysisData_daily_dask.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "1df62f37-e43c-4f83-9107-5cebfdbacca9",
    "metadata": {},
    "outputs": [],
@@ -34,13 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7f99ac83-a585-425d-931c-996ac20aef2d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Client(n_workers=48, threads_per_worker=2, memory_limit='32GB')\n",
-    "client"
+    "client = Client(n_workers=48, threads_per_worker=2, memory_limit='32GB')"
    ]
   },
   {
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "16fa8168-9a5e-450d-ac67-7e24fe1fad27",
    "metadata": {},
    "outputs": [],
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "95fc918c-c177-4c1c-bee5-efd9e7fe07fd",
    "metadata": {},
    "outputs": [],
@@ -966,9 +965,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ocean]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-ocean-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -980,7 +979,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
