--- a/analysisData_daily_NortAtl.ipynb
+++ b/analysisData_daily_NortAtl.ipynb
@@ -72,6 +72,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8e31179",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HOME=os.environ['HOME']\n",
+    "USER=os.environ['USER']  "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "87781c5c-5ee1-4068-9962-e9cef21a2291",
    "metadata": {},
@@ -87,10 +98,10 @@
    "outputs": [],
    "source": [
     "if os.uname().nodename.lower().find('eemmmbp') != -1:\n",
-    "    base_file = '/Users/pvb/Dropbox/Oceanografia/Data/Satelite/noaa.oisst.v2.highres/NC/sst.day.mean'\n",
+    "    base_file = HOME + '/Dropbox/Oceanografia/Data/Satelite/noaa.oisst.v2.highres/NC/sst.day.mean'\n",
     "elif os.uname().nodename.lower().find('rossby') != -1:\n",
     "    base_file = '/data/shareddata/Satelite/noaa.oisst.v2.highres/NC/sst.day.mean'\n",
-    "    dataDir = '/home/pvb/Analisis/SSTGlobalAnalysis/data'"
+    "    dataDir   = HOME + '/Analisis/SSTGlobalAnalysis/data'"
    ]
   },
   {
