--- a/downloadData.ipynb
+++ b/downloadData.ipynb
@@ -15,13 +15,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "02e3547f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HOME=os.environ['HOME']\n",
+    "USER=os.environ['USER']   "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "1aff5ca3-ab30-4e6f-a209-1f21fab10312",
    "metadata": {},
    "outputs": [],
    "source": [
     "if os.uname().nodename.lower().find('eemmmbp') != -1:\n",
-    "    data_dir = '/Users/pvb/Dropbox/Oceanografia/Data/Satelite/noaa.oisst.v2.highres/NC'\n",
+    "    data_dir = HOME + '/Dropbox/Oceanografia/Data/Satelite/noaa.oisst.v2.highres/NC'\n",
     "elif os.uname().nodename.lower().find('rossby') != -1:\n",
     "    data_dir = '/data/shareddata/Satelite/noaa.oisst.v2.highres/NC'"
    ]
