--- a/plotsMapAnomalies.ipynb
+++ b/plotsMapAnomalies.ipynb
@@ -44,16 +44,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "91871a56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HOME=os.environ['HOME']\n",
+    "USER=os.environ['USER']   "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "6584227d-0bfd-46ce-9add-ab5236abd687",
    "metadata": {},
    "outputs": [],
    "source": [
     "if os.uname().nodename.lower().find('eemmmbp') != -1:\n",
-    "    imagesDir = '/home/pvb/Dropbox/Oceanografia/Analisis/SSTGlobalAnalysis/images'\n",
+    "    imagesDir = HOME + '/Dropbox/Oceanografia/Analisis/SSTGlobalAnalysis/images'\n",
     "elif os.uname().nodename.lower().find('rossby') != -1:\n",
-    "    imagesDir = '/home/pvb/Analisis/SSTGlobalAnalysis/images'\n",
-    "    dataDir = '/home/pvb/Analisis/SSTGlobalAnalysis/data'"
+    "    imagesDir = HOME + '/Analisis/SSTGlobalAnalysis/images'\n",
+    "    dataDir   = HOME + '/Analisis/SSTGlobalAnalysis/data'"
    ]
   },
   {
