--- a/analysisData_daily_dask.ipynb
+++ b/analysisData_daily_dask.ipynb
@@ -74,6 +74,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc3b979c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HOME=os.environ['HOME']\n",
+    "USER=os.environ['USER']   "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "87781c5c-5ee1-4068-9962-e9cef21a2291",
    "metadata": {},
@@ -89,10 +100,10 @@
    "outputs": [],
    "source": [
     "if os.uname().nodename.lower().find('eemmmbp') != -1:\n",
-    "    base_file = '/Users/pvb/Dropbox/Oceanografia/Data/Satelite/noaa.oisst.v2.highres/NC/sst.day.mean'\n",
+    "    base_file = HOME + '/Dropbox/Oceanografia/Data/Satelite/noaa.oisst.v2.highres/NC/sst.day.mean'\n",
     "elif os.uname().nodename.lower().find('rossby') != -1:\n",
     "    base_file = '/data/shareddata/Satelite/noaa.oisst.v2.highres/NC/sst.day.mean'\n",
-    "    dataDir = '/home/pvb/Analisis/SSTGlobalAnalysis/data'"
+    "    dataDir   = HOME + '/Analisis/SSTGlobalAnalysis/data'"
    ]
   },
   {
@@ -979,7 +990,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
