--- a/Mejoras/Trends.ipynb
+++ b/Mejoras/Trends.ipynb
@@ -2477,9 +2477,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ocean]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-ocean-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2491,7 +2491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
