Exploring MUR data0

--- a/analysisData.ipynb
+++ b/analysisData.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "1df62f37-e43c-4f83-9107-5cebfdbacca9",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "96a0cb05",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "fc159cfd",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "16fa8168-9a5e-450d-ac67-7e24fe1fad27",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "95fc918c-c177-4c1c-bee5-efd9e7fe07fd",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "d11420d4",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "b7a97b46",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "2fad8099",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
        "'/data/pvb/Satelite/noaa.oisst.v2.highres/NC/sst.day.mean'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "3c26178c",
    "metadata": {},
    "outputs": [],
@@ -184,17 +184,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "33e222c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "it=7"
+    "it=5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "a29d8320",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "53a62410",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Demarcación marina canaria\n"
+      "Demarcación marina levantino-balear\n"
      ]
     }
    ],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "609a9060",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "9d63a86b-a734-46b6-80eb-d8f0545badfb",
    "metadata": {},
    "outputs": [],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "id": "f6ec24d7",
    "metadata": {},
    "outputs": [],
@@ -265,103 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "996c73bf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(348.0276191000022, 30.6505730980622),\n",
-       " (348.1873529000022, 30.3433248980736),\n",
-       " (348.1865538000023, 30.3047879980752),\n",
-       " (347.9229216000023, 29.430863998109),\n",
-       " (347.7823706000023, 29.1274278981211),\n",
-       " (347.6661783000023, 28.9976227981264),\n",
-       " (347.5543025526444, 28.9013836902643),\n",
-       " (347.4886522373837, 28.8557149434319),\n",
-       " (347.3205116306273, 28.7346670645906),\n",
-       " (347.3058826258124, 28.7238912706966),\n",
-       " (347.1618342000025, 28.6331306981414),\n",
-       " (346.8958669000024, 28.5175740981462),\n",
-       " (346.7608119000025, 28.4190522981505),\n",
-       " (346.6109801000026, 28.1890237981602),\n",
-       " (346.5558229000025, 28.0776318981649),\n",
-       " (346.3608754000026, 27.8629899981741),\n",
-       " (346.1558379000026, 27.6624464981829),\n",
-       " (346.0338916000026, 27.5244839981888),\n",
-       " (345.8687462000026, 27.3875628981948),\n",
-       " (345.6522340000027, 27.2331415982018),\n",
-       " (345.4434232000027, 27.2118465982027),\n",
-       " (345.0813157000028, 27.029986098211),\n",
-       " (344.8897331951065, 26.9167403768836),\n",
-       " (344.40681094549143, 26.6315354626052),\n",
-       " (343.9520623000031, 26.3762834982409),\n",
-       " (343.5469458000032, 26.200960898249),\n",
-       " (343.2642086000032, 26.1102436982533),\n",
-       " (343.2593468435683, 26.1045943188324),\n",
-       " (343.0139315000033, 25.8239049982669),\n",
-       " (342.9198771000032, 25.719292398272),\n",
-       " (342.846430334571, 25.6548240145073),\n",
-       " (342.63462809975067, 25.5497047613125),\n",
-       " (342.3469931814636, 25.4120777935995),\n",
-       " (342.0915136479605, 25.2905144462687),\n",
-       " (341.4403110000035, 24.9939946983074),\n",
-       " (340.4917112000036, 24.5887327983274),\n",
-       " (340.0076949000037, 24.8044439983167),\n",
-       " (339.40831470000387, 25.1876717982978),\n",
-       " (339.041830800004, 25.5157321982819),\n",
-       " (338.7069507000041, 25.9141510982628),\n",
-       " (338.4709168000041, 26.2923119982449),\n",
-       " (338.3329127000041, 26.5842758982314),\n",
-       " (338.2754122864136, 26.7409879954466),\n",
-       " (338.2204999894978, 26.9107131119397),\n",
-       " (338.1859061000042, 27.0326420982107),\n",
-       " (338.1413696000042, 27.2460753982012),\n",
-       " (338.1047195000042, 27.934948798171),\n",
-       " (338.1618543000042, 28.3658407981527),\n",
-       " (338.2095702000041, 28.5613372981446),\n",
-       " (338.2019705000041, 28.66482549814),\n",
-       " (338.2185818000041, 29.181807798119),\n",
-       " (338.2984430000042, 29.5931083981025),\n",
-       " (338.4467097000041, 30.0173398980861),\n",
-       " (338.6724669000041, 30.44134629807),\n",
-       " (339.048947000004, 30.930481298052),\n",
-       " (339.3083304268099, 31.1718974624245),\n",
-       " (341.3878279000036, 30.9349799980517),\n",
-       " (341.8114235000034, 30.8704637980543),\n",
-       " (342.2103907000033, 30.8096572980563),\n",
-       " (342.4633620504199, 30.7347968104027),\n",
-       " (343.2053628526602, 30.5287790851344),\n",
-       " (343.3653026000031, 30.4839968980682),\n",
-       " (343.3677261751638, 30.4841402824925),\n",
-       " (343.936819700003, 30.517809198067),\n",
-       " (343.9256224278012, 30.5132443398207),\n",
-       " (344.272727600003, 30.5357688980665),\n",
-       " (344.5332814000029, 30.5530971980658),\n",
-       " (344.770808200003, 30.7269108980594),\n",
-       " (345.0686137621247, 30.944542967309),\n",
-       " (345.5108105000028, 31.26568469804),\n",
-       " (346.1208895000026, 31.7038941980246),\n",
-       " (346.6340742000026, 32.0683947980122),\n",
-       " (346.9515211000025, 32.2387366980066),\n",
-       " (347.8282530279663, 31.0518998682714),\n",
-       " (347.867446358616, 30.9813560965764),\n",
-       " (348.0276191000022, 30.6505730980622)]"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "demCoord"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "54958a4a-4330-4f2a-aff1-f4b3eda57a21",
    "metadata": {},
    "outputs": [
@@ -369,23 +273,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">>>>> Demarcación marina canaria\n"
+      ">>>>> Demarcación marina levantino-balear\n"
      ]
     }
    ],
    "source": [
-    "if it == 4 :\n",
-    "    sst = DS.sst.sel(lat=slice(20, 50),lon=slice(325,360))\n",
-    "    basins = xr.open_dataset(dataDir+'/basins.nc')\n",
-    "    basin_surf = basins.basin[0]\n",
-    "    basin_surf_interp = basin_surf.interp_like(sst, method='nearest')\n",
-    "    sst = sst.where((basin_surf_interp==1) ,drop=Truex)\n",
-    "\n",
-    "\n",
     "if titulo_short == 'LEB':\n",
     "    slicelatitude=slice(35.5,42.75)\n",
     "    slicelongitude=slice(358,368)\n",
-    "        sst=DS.sst.sel(lat=slicelatitude).sel(lon=slicelongitude)\n",
+    "    sst=DS.sst.sel(lat=slicelatitude).sel(lon=slicelongitude)\n",
     "    mask = np.array([[point_in_polygon(lon,lat,demPolygon_transformed) \n",
     "         for lon in sst.lon.values] \n",
     "         for lat in sst.lat.values])\n",
@@ -471,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "id": "61a2b504",
    "metadata": {},
    "outputs": [
@@ -479,7 +375,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">>>>> DailyDemarcación marina canariaCAN\n"
+      ">>>>> DailyDemarcación marina levantino-balearLEB\n"
      ]
     }
    ],
@@ -489,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "id": "571f7c1c",
    "metadata": {},
    "outputs": [],
@@ -498,13 +394,22 @@
     "weights = np.cos(np.deg2rad(sst.lat))\n",
     "weights = weights/weights.max()\n",
     "weights.name = \"weights\"\n",
-    "sst_weighted = sst.weighted(weights)\n",
+    "sst_weighted = sst.weighted(weights)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f96b0bb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sst_wmean = sst_weighted.mean((\"lon\", \"lat\"),skipna=True).load()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "id": "22d9dedd-dbf1-4a6d-9b0b-0b0a86bce239",
    "metadata": {},
    "outputs": [],
@@ -515,7 +420,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
+   "id": "700dd9c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "2c665722",
    "metadata": {},
    "outputs": [
@@ -535,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "id": "160a7d60",
    "metadata": {},
    "outputs": [],
@@ -582,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "e2e8f5dc-178e-4f40-9cd0-c369b86f86a7",
    "metadata": {},
    "outputs": [],
@@ -592,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "6a3ed02d-e627-4d65-80cb-47e3855fe547",
    "metadata": {},
    "outputs": [],
@@ -608,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "1dfd2e62",
    "metadata": {},
    "outputs": [],
@@ -619,10 +532,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "b62f5a7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    > Compute anomaly mean\n"
+     ]
+    }
+   ],
    "source": [
     "## Create anomaly\n",
     "print('    > Compute anomaly mean')\n",
@@ -632,10 +553,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "8c30b787",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    > Compute weigthtened mean\n"
+     ]
+    }
+   ],
    "source": [
     "##Calculate global mean weigthtened\n",
     "print('    > Compute weigthtened mean')\n",
@@ -664,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f0a7a37",
+   "id": "d1e85fcf",
    "metadata": {},
    "outputs": [],
    "source": []
