--- a/plotsTimeSeries.ipynb
+++ b/plotsTimeSeries.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ca4c0595-ff62-4592-877a-dbadab190811",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
     }
    ],
    "source": [
-    "locale.setlocale(locale.LC_TIME, \"es_ES\")"
+    "locale.setlocale(locale.LC_TIME, \"es_ES\");"
    ]
   },
   {
@@ -57,14 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4355467a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def FiguraSerieTemporal(sst,Ylabel,Xlabel,TituloFigura,FileOut,Ymin,Ymax):\n",
+    "#def FiguraSerieTemporal(sst,Ylabel,Xlabel,TituloFigura,FileOut,Ymin,Ymax):\n",
     "## Serie temporal anotada con valores maximos y minimos\n",
-    "    dTText = .12\n",
+    "dTText = .12\n",
     "    \n",
     "    sst_rolling = sst.rolling(time = 360 , center = True).mean()\n",
     "    \n",
@@ -101,72 +101,6 @@
     "                bbox={'facecolor':'white', 'edgecolor':'none', 'pad':10},size=14)\n",
     "\n",
     "    ax.grid(linestyle='-', linewidth=.9)\n",
-    "    ax.set_ylabel(Ylabel)\n",
-    "    ax.set_xlabel(Xlabel)\n",
-    "    ax.set_frame_on(False)\n",
-    "    plt.savefig(FileOut)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "e68811ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def FiguraSerieTemporal_anual(sst,Ylabel,Xlabel,TituloFigura,FileOut,Ymin,Ymax):\n",
-    "# Serie temporal por años    \n",
-    "    dTText = .2\n",
-    "    \n",
-    "    currentYear = datetime.date.today().year\n",
-    "    sstHist = sst.sel(time=slice(\"1982-01-01\", str(currentYear-1)+\"-12-31\"))\n",
-    "\n",
-    "    df         = sstHist.groupby(sstHist.time.dt.dayofyear).mean().to_dataframe(name=\"mean\")\n",
-    "    df[\"std\"]  = sstHist.groupby(sstHist.time.dt.dayofyear).std().values\n",
-    "\n",
-    "    for year, yearda in sst.groupby(sst.time.dt.year):\n",
-    "        df[year] = pd.Series(index=yearda[\"time\"].dt.dayofyear, data=yearda.values)\n",
-    "    \n",
-    "    df.index   = pd.date_range(start='01/Jan/2020', end='31/12/2020', freq='D')  \n",
-    "\n",
-    "    currentYear = datetime.date.today().year\n",
-    "    indLastData = np.where(df[currentYear].isnull())[0].tolist()[0]-1\n",
-    "\n",
-    "    date_form = DateFormatter(\"1-%b\")\n",
-    "    \n",
-    "    #Figura\n",
-    "    fig, ax = plt.subplots(figsize=(14,8))\n",
-    "\n",
-    "    ax.fill_between(x=df.index, y1=df[\"mean\"]+2*df[\"std\"], \n",
-    "                    y2=df[\"mean\"]-2*df[\"std\"],alpha=0.5, color='#D3D3D3',\n",
-    "                    label='1.5*std')\n",
-    "\n",
-    "    ax.plot(df.index,df[1982],label='1982')\n",
-    "    \n",
-    "    for year in range(currentYear-4,currentYear,1):\n",
-    "        ax.plot(df.index,df[year],label=year)\n",
-    "    \n",
-    "    ax.plot(df.index,df[\"mean\"],'k',linewidth='3',label='mean')\n",
-    "    \n",
-    "    ax.plot(df.index,df[currentYear],'b',linewidth='3',label=currentYear)\n",
-    "    ax.plot(df.index[indLastData],df[currentYear][indLastData],'bo', markersize=12)\n",
-    "\n",
-    "    ax.set_xlim(df.index[0],df.index[365])\n",
-    "    ax.xaxis.set_major_formatter(date_form)\n",
-    "\n",
-    "    handles, labels = ax.get_legend_handles_labels()\n",
-    "    order=[6,0,1,2,3,4,5,7]\n",
-    "    ax.legend([handles[idx] for idx in order],[labels[idx] for idx in order], loc=4)\n",
-    "    \n",
-    "    ax.grid(linestyle='-', linewidth=.9)\n",
-    "\n",
-    "    tPeriodo = ' ['+sst.time[0].dt.strftime(\"%d %B %Y\").values + \" - \"+ sst.time[-1].dt.strftime(\"%d %B %Y\").values + ']'\n",
-    "    tTActual = sst.time[-1].dt.strftime(\"%d %B %Y\").values + \" %2.2f ($^\\circ$C) \"%(sst[-1].values)\n",
-    "    tTMaxima = 'Temperatura máxima: ' + \"%2.2f ºC\"%(sst.isel(sst.argmax(...)).values)\n",
-    "    tFechaTMaxima = ' el ' + sst.time.isel(sst.argmax(...)).dt.strftime(\"%d %B %Y\").values\n",
-    "\n",
-    "    ax.set_title(TituloFigura + tPeriodo +'\\n' + tTActual + '. ' + tTMaxima + tFechaTMaxima);\n",
-    "\n",
     "    ax.set_ylabel(Ylabel)\n",
     "    ax.set_xlabel(Xlabel)\n",
     "    ax.set_frame_on(False)\n",
